Fixed some layout issues

--- a/app/assets/stylesheets/jumbotron.css
+++ b/app/assets/stylesheets/jumbotron.css
@@ -4,35 +4,13 @@ body {
   padding-bottom: 20px;
 }
 
-/* Set widths on the navbar form inputs since otherwise they're 100% wide */
-.navbar-form input[type="text"],
-.navbar-form input[type="password"] {
-  width: 180px;
-}
-
-/* Wrapping element */
-/* Set some basic padding to keep content from hitting the edges */
-.body-content {
-  padding-top: 15px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.container {  
+.jumbotron {
+  margin-bottom: 20px;
 }
 
 .flash_alerts {
-  padding-top: 15px;	
+  margin-top: 15px;
 }
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  /* Let the jumbotron breathe */
-  .jumbotron {
-  }
-  /* Remove padding from wrapping element since we kick in the grid classes here */
-  .body-content {
-    padding-left : 0px;
-    padding-rght: 0px;
-  }
+.body_content {
+  margin-top: 15px;
 }
